--- a/WebAppStudentHub-master/css/content.css
+++ b/WebAppStudentHub-master/css/content.css
@@ -1,27 +1,97 @@
-/* Link styling within content area */
-.site-content a:link { color: #07b; }
-.site-content a:visited { color: #70b; }
-.site-content a:hover, 
-.site-content a:focus { color: #f63; }
-.site-content a:active { color: #ec3; }
 
-/* Mark external links with a symbol */
-.site-content a[href^="https"]::after {
-  content: " \29c9"; 
-}
-
-/* Styling for infoboxes, typically found on the homepage */
+/* Styling for infoboxes */
 .infoboxen {
-    background-color: whitesmoke;
-    color: black; 
+    background-color: var(--color-background-dark); 
+    color: var(--color-font); 
     padding: 1rem; 
     margin-bottom: 1rem; 
 }
 
 .infobox {
-    text-align: center;
-    background-color: white;
-    color: black; 
-    padding: 1rem; 
-    margin: 1rem; 
+  display: flex;
+  flex-flow: column;
+
+  text-align: center;
+  background-color: var(--color-background-light);
+  color: var(--color-font) 
+  padding: 1rem; 
+  margin: 1rem; 
+  
+  box-shadow: 4px 8px  8px rgba(0, 0, 0, 0.2); 
+  border-radius: 1rem;
 }
+
+/* das letzte Element in jeder Infobox: */
+.infobox :last-child {
+  margin-top: auto;
+}
+
+
+@media screen and (min-width: 600px) {
+
+  .infoboxen > .inside {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+  }
+}
+
+
+.icon img[src$="svg"] {
+  width: 4rem;
+  height: auto; 
+}
+
+
+/* Oppdateringsoversikt Stiler */
+.updateboxen {
+  background-color: var(--color-background-light); 
+  padding: 1rem; 
+  margin-bottom: 1rem; 
+}
+
+.updateboxen> .inside {
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem; 
+}
+
+.updateboxen> ..inside > h2 {
+  grid-column: 1/-1; 
+}
+
+/* Enkelt oppdateringselement */
+.updatebox {
+  text-align: center; 
+  background-color: var(--color-background-dark);
+  color: var(--color-font);
+  background-image: linear-gradient(to right, var(#818889), var(--color-background-lightt, whitesmoke)); 
+  box-shadow: 0 1px 3px var(--color-shadow); 
+
+  padding: 1rem;
+  border-left: 5px solid var(--color-nav);
+  margin: 0; 
+  margin-bottom: 1rem;
+}
+
+.updatebox p:first-child { 
+  font-size: 1.25rem; 
+  font-weight: bold; 
+}
+
+/* Stil for listeelementer i oppdateringer, om nødvendig */
+.updatebox ul {
+  padding-left: 20px; /* Justering for listeinnrykk */
+}
+
+/* Gjelder for skjermer bredere enn 600px - endret updates container til inside - se på senere .... */
+@media screen and (min-width: 600px) {
+  .updateboxen > .inside {
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem; 
+  }
+
+
+}
+
