--- a/WebAppStudentHub-master/css/style.css
+++ b/WebAppStudentHub-master/css/style.css
@@ -1,13 +1,36 @@
 
+/* CSS Styleguide */
 
 
 
+/* basic settings */
 @import url("basis.css");
+
 @import url("layout.css"); 
-@import url("navi-flex.css");
+@import url("layout-modern.css"); 
+
+@import url("header.css"); 
+
+/* @import url("layout-modern.css");  */
+
+
+/* Modul für eine responsive Inline-Navigation */
+@import url("navi-responsive.css");
+
+
 @import url("content.css");
+
+
+
+
 @import url("contact.css"); 
 
 
 
+@import url("footer.css"); 
+
+
+
 /* eof */
+
+
