--- a/WebAppStudentHub-master/css/navi-flex.css
+++ b/WebAppStudentHub-master/css/navi-flex.css
@@ -3,7 +3,8 @@
   */
 
   .site-nav { 
-    background: #333; 
+     background: 
+     #00a3d2; 
     color: white; 
     
     padding: 0 1rem; 
@@ -31,7 +32,7 @@
     flex: 1; 
   
     /* Add a border line to the left of list items, ... */
-    border-left: 1px solid white; 
+    /* border-left: 1px solid white;  */
   }
   /* ... and also to the right of the last item */
   .site-nav li:last-child {
@@ -49,7 +50,7 @@
     
     /* Center text within the block */
     text-align: center; 
-    text-decoration: none;
+    text-decoration: none  !important; 
     color: white; 
   
     /* Increase the clickable area of the links */
@@ -59,15 +60,21 @@
   /* Style the current link and various states */
   .site-nav a:hover, 
   .site-nav a:focus {
-    background-color: #07b;
+    background-color: #1e0043;
     color: white; 
   }
   .site-nav a.current {
-    background-color: #07b;
+    background-color: #1e0043;
     color: white; 
+    
+    /* text-decoration: underline;
+    border-bottom:1px solid pink;  */
   } 
   .site-nav a:active {
-    background-color: #3ad;
+    background-color: #1e0043;
     color: white; 
   }
+
+
+
   
