--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 
 /* @import url("layout-modern.css");  */
 
+/* tat ut navi-flex.css - slettes?  */
 
 /* Modul für eine responsive Inline-Navigation */
 @import url("navi-responsive.css");
@@ -27,8 +28,8 @@
 
 
 
-@import url("footer.css"); 
-
+/* @import url("footer.css"); 
+ */
 
 
 /* eof */
