--- a/css/basis.css
+++ b/css/basis.css
@@ -7,22 +7,31 @@
  /* Globale Custom Properties definieren  */
 
 html {
+
     --color-background-light: #f9f9f9; 
     --color-background-dark: #e9e9e9; 
-    --color-grey-border:#818889; 
-    --color-yellow: #fcd770; 
-    --color-icon-community:#e18a00;
-    --color-icon-finance: #a19dff;
-    --color-icon-task:#00a3d2;
-
-    --color-skincolour2:#fcd4b4; 
-    --color-purple-light:#ff33cc; 
-
     --color-font: #120800; 
     --color-nav: #00a3d2; 
     --color-nav-darker: #007293; 
 
-    --color-shadow: 4px 8px  8px rgba(0, 0, 0, 0.2); 
+    --color-shadow: 4px 8px  8px rgba(0, 0, 0, 0.2);  
+
+    --color-grey-border:#818889; 
+    --color-grey-border-light: #8e9495; 
+
+/* farger brukt til icon: */
+
+    --color-icon-community:#e18a00;
+    --color-icon-finance: #a19dff;
+    --color-icon-task:#00a3d2;
+
+/* Andre farger som kan brukes: */
+    --color-yellow: #fcd770; 
+    --color-skincolour2:#fcd4b4; 
+    --color-purple-light:#ff33cc; 
+    --color-yellow-nav:#f9d5b4; 
+
+
 }
 
    
@@ -39,7 +48,11 @@ html { scroll-behavior: smooth; }
 /* Collapsing Margins vermeiden */ 
 h1, h2, h3, h4, h5, h6, p, ul, ol, blockquote { margin-top: 0; }
 
+/* Bilder und Videos mit flexibler Breite einbinden */ 
+img, video { max-width: 100%; height: auto; }
 
+/* figure ohne horizontale Außenabstände */
+figure { margin-left: 0; margin-right: 0; } 
 
 
 /**  
