--- a/css/content.css
+++ b/css/content.css
@@ -1,15 +1,25 @@
+/* Linkzustände für den Inhaltsbereich */
+.site-content a:link { color: var(--color-nav,#00a3d2); } 
+.site-content a:visited { color: var(--color-nav,#00a3d2); } 
+.site-content a:hover, .site-content a:focus { color: var(--color-nav-darker,#007293); } 
+.site-content a:active { color: var(--color-nav-darker,#007293); }
+
+
+
 
 /* Styling for infoboxes */
 .infoboxen {
-    background-color: var(--color-background-dark); 
-    color: var(--color-font); 
+    background-color: var(--color-background-dark,#e9e9e9 ); 
     padding: 1rem; 
-    margin-bottom: 1rem; 
+    margin-bottom: 1 rem; 
 }
 
 .infobox {
   display: flex;
   flex-flow: column;
+
+  justify-content: center;
+  align-items: center;
 
   text-align: center;
   background-color: var(--color-background-light);
@@ -17,16 +27,17 @@
   padding: 1rem; 
   margin: 1rem; 
   
-  box-shadow: 4px 8px  8px rgba(0, 0, 0, 0.2); 
+  box-shadow: var(color-shadow); 
   border-radius: 1rem;
 }
+
 
 /* das letzte Element in jeder Infobox: */
 .infobox :last-child {
   margin-top: auto;
 }
 
-
+/* ab 600 pixel: */
 @media screen and (min-width: 600px) {
 
   .infoboxen > .inside {
@@ -43,55 +54,70 @@
 }
 
 
-/* Oppdateringsoversikt Stiler */
-.updateboxen {
-  background-color: var(--color-background-light); 
-  padding: 1rem; 
-  margin-bottom: 1rem; 
-}
 
-.updateboxen> .inside {
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1rem; 
-}
 
-.updateboxen> ..inside > h2 {
-  grid-column: 1/-1; 
-}
 
-/* Enkelt oppdateringselement */
-.updatebox {
-  text-align: center; 
-  background-color: var(--color-background-dark);
-  color: var(--color-font);
-  background-image: linear-gradient(to right, var(#818889), var(--color-background-lightt, whitesmoke)); 
-  box-shadow: 0 1px 3px var(--color-shadow); 
 
-  padding: 1rem;
-  border-left: 5px solid var(--color-nav);
-  margin: 0; 
-  margin-bottom: 1rem;
-}
 
-.updatebox p:first-child { 
-  font-size: 1.25rem; 
-  font-weight: bold; 
-}
 
-/* Stil for listeelementer i oppdateringer, om nødvendig */
-.updatebox ul {
-  padding-left: 20px; /* Justering for listeinnrykk */
-}
+/** 
+  * Updateboxen 
+  */ 
 
-/* Gjelder for skjermer bredere enn 600px - endret updates container til inside - se på senere .... */
-@media screen and (min-width: 600px) {
-  .updateboxen > .inside {
-    display: grid; 
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1rem; 
+  @media screen and (min-width: 600px) {
+  
+    .updateboxen > .inside {
+      display: grid; 
+      grid-template-columns: 1fr 1fr 1fr ;
+      grid-gap: 1rem; 
+    }
+
+    
+    .updateboxen > .inside > h2 {
+         grid-column: 1/-1; 
+    }
+
+  } /* Ende @media */
+
+  .updatebox {
+    text-align: center; 
+    background-color: var(--color-background-dark,#e9e9e9 );
+    color: var(--color-color-font,#120800);
+    background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));
+   box-shadow: 0 1px 3px var(--color-shadow); 
+  
+    padding: 1rem;
+  border-left: 5px solid var(--color-icon-finance, #a19dff);
+    margin: 0; 
+    margin-bottom: 1rem;
   }
 
 
-}
+  /* .updatebox p:first-child { 
+    font-size: 1.25rem; 
+    font-weight: bold;  
+  }*/
+
+  /* Unregelmäßiges Grid */
+  .updatebox:nth-child(5) {
+    /* Platzierung per auto-placement, aber über 2 Spalten und Zeilen */
+    grid-column: span 2; 
+    grid-row: span 2; 
+
+    /* Vertikal zentrieren */
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+  }
+
+  .updatebox blockquote { 
+    margin: 0; 
+  } 
+  .updatebox p:first-child { 
+    font-size: 1.25rem; 
+    font-weight: bold; 
+  }
+
+
+  /* dashboard */
 
