--- a/css/layout.css
+++ b/css/layout.css
@@ -1,7 +1,8 @@
 /*
     
 
-    layout.css  
+    layout.css  (ikke slett!)
+    
     wird in style.css per @import eingebunden  
 
     Stylesheet zur Gestaltung der Layoutbereiche
@@ -20,7 +21,33 @@
   */ 
 
 /* Hintergrundfarbe für das Stammelement */ 
-html { background-color: var(--grey-very-light, whitesmoke); }
+html { background-color: var(--color-background-light); }
+
+/* Grundlegende Gestaltung für body */
+body {
+  /* Hintergrundfarbe und Begrenzung der Breite */ 
+  background-color: var(--color-background-light); 
+  min-width: 320px; 
+  max-width: 600px; 
+
+  /* Horizontal zentrieren */ 
+  margin: 0 auto;   
+
+  /* Sticky Footer, Schritt 1/2 */
+  display: flex;
+  flex-flow: column; 
+  min-height: 100vh;    
+
+}
+
+/* Optional: Für moderne Browser mehr Platz auch beim klassischen Layout */
+@supports (display: grid) {
+  
+  body {
+    max-width: 960px; 
+  }
+
+} /* Ende @supports */ 
 
 /* Margin between logo and slogan */
 /* logo er tatt bort */
@@ -30,7 +57,23 @@ html { background-color: var(--grey-very-light, whitesmoke); }
 /* nav - se navi-flex.css */
 
 /** 
-  * 2. Content Area (Infobox - Styles in a separate stylesheet: content.css) 
+  * 2. Kopfbereich (inklusive Inhalte)  
+  */ 
+
+/* Innen- und Außenabstände */
+.site-header { 
+  padding: 1rem 1rem 0 1rem; 
+  margin-bottom: 1rem; 
+} 
+
+/* Fine-Tuning: Die Abstände um Logo und Slogan anpassen */ 
+.site-header h1 { margin-bottom: 0; }
+.site-header p { margin-top: 0; }
+ 
+
+
+/** 
+  * 3. Inhaltsbereich (Inhalte in content.css)  
   */ 
 
 /* Innen- und Außenabstände */
@@ -44,17 +87,17 @@ html { background-color: var(--grey-very-light, whitesmoke); }
 } 
  
 
+
+
 /** 
   * 4. Fußbereich (inklusive Inhalte)  
   */ 
-
-/* Grundlegende Gestaltung für den Footer */ 
+/* Grundlegende Gestaltung für den Footer */
 .site-footer {
-<<<<<<< HEAD
   font-size: smaller; 
-  background-color: var(--grey-very-dark, #333);
-  color: var(--color-base-light, white); 
-  text-align: right; 
+  background-color: var(--color-nav);
+  color: white; 
+  text-align: right;
   padding: 1rem;
 }
 
@@ -71,31 +114,20 @@ html { background-color: var(--grey-very-light, whitesmoke); }
   margin-right: 0.5rem;
 }
 
+
 .footer-nav li:first-child {
   padding-right: 0.5rem; 
-  border-right: 1px solid var(--grey-light); 
+  border-right: 1px solid var(--color-background-light); 
 }
 
-.footer-nav li:last-child {
+
+footer-nav li:last-child {
   margin-right: 0; 
   margin-left: auto; 
-=======
-    background-color: #00a3d2;
-    color: white; 
-
-    padding: 0.5rem 1rem; 
-    margin: 1rem 0; 
-}  
-
-/* "Back to top" link - font slightly smaller and aligned to the right */
-.site-footer {
-    font-size: smaller;
-    text-align: right;
->>>>>>> 5a2cb61 (Added image, icons, and styled with colors)
 }
 
 .site-footer a {
-  color: var(--color-base-light, white); 
+  color:white; 
   text-decoration: none; 
 }
 
@@ -105,9 +137,8 @@ html { background-color: var(--grey-very-light, whitesmoke); }
 }
 
 .site-footer a:active {
-  color: var(--color-accent-active); 
+  color: var(--color-nav-darker, #007293); 
 }
-
 /** 
   * Ende layout.css 
   */ 
