--- a/css/content.css
+++ b/css/content.css
@@ -23,12 +23,12 @@
 
   text-align: center;
   background-color: var(--color-background-light);
-  color: var(--color-font) 
+  color: var(--color-font);  
   padding: 1rem; 
   margin: 1rem; 
   
-  box-shadow: var(color-shadow); 
-  border-radius: 1rem;
+  box-shadow: var(--color-shadow); 
+  /* border-radius: 0.5rem; */
 }
 
 
@@ -82,7 +82,7 @@
   .updatebox {
     text-align: center; 
     background-color: var(--color-background-dark,#e9e9e9 );
-    color: var(--color-color-font,#120800);
+    color: var(--color-font,#120800);
     background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));
    box-shadow: 0 1px 3px var(--color-shadow); 
   
