--- a/css/navi-responsive.css
+++ b/css/navi-responsive.css
@@ -20,7 +20,7 @@
     
 /* Navigationsbereich gestalten */
 .site-nav { 
-  background-color: var(--color-nav);
+  background-color: var(--color-nav,#00a3d2);
   color: white; 
 
   box-shadow: 0 2px 6px var(--color-shadow);
@@ -46,7 +46,7 @@
 /* Navigationslinks gestalten */
 .site-nav a {
   display: block;
-  background: var(--color-nav);
+  background: var(--color-nav, #00a3d2);
   color: white; 
   text-decoration: none; 
   padding: 0.5rem 1rem; 
@@ -54,7 +54,7 @@
 
 /* Hover und Focus gestalten */
 .site-nav a:hover, .site-nav a:focus {
-  background: var(--color-nav-darker); 
+  background: var(--color-nav-darker, #007293); 
   color:white; 
 }
 
@@ -95,16 +95,14 @@
   margin: 0; 
 }
 
-/* Noen som klaer å sette inn hamburger icon her? jeg gjør noe feil??  */
+
+/* Hamburgerikon */
 .js .menubutton::before {
-  content: url("bilder/icon/flaticonCom/menuburger.svg"); 
+  content: url("../../UIComponentLibrary/hamburger.svg"); 
   width: 1rem; 
   height: 1rem; 
   margin: 0.25rem; 
 }
-
-
-
 
 
 /**
@@ -130,7 +128,7 @@
 
 /* Tausche Hamburger gegen X */
 .js .menubutton.showmenu::before {
-  content: url("../bilder/menuclose.svg");
+  content: url("../../UIComponentLibrary/menuclose.svg");
 }
 
 
