--- a/css/content.css
+++ b/css/content.css
@@ -1,58 +1,14 @@
+/* her er bare content ikke header, nav?  */
+
+/* - Hyperlinks im Inhaltsbereich 
+- Infoboxen 
+- Feedback */
+/* hvor hører icon til  */
+
 .icon img[src$="svg"] {
   width: 4rem;
   height: auto; 
 }
-
-/* .content-intro h2 {
-  color: #818889
-} */
-
-.content-intro {
-  position: relative;
-}
-.content-intro img {
-  display: block;
-  
-  max-width: 100%; /* Tilpasser seg foreldrelementets bredde */
-  height: auto; /* Beholder bildets proporsjoner */
- 
-}
-
-.image-caption {
-  position: absolute;
-  top: 2px; 
-  left: 30%;
-  transform: translateX(-50%);
-  z-index: 1; 
-  font-family: 'Optima', cursive; /* Bruk Lobster fonten eller en annen håndskriftfont */
-  color: var(--color-nav); 
-  font-size: 2.5rem; /* Standard skriftstørrelse */
-  font-weight: lighter; /* Redusert skriftvekt for å gjøre den lettere */
-  opacity: 0.8; /* Reduser gjennomsiktigheten for å gjøre teksten mindre dominerende */
-}
-
-/* Medieforespørsel for mindre skjermstørrelser */
-@media screen and (max-width: 768px) {
-  .image-caption {
-    font-size: 2rem; /* Mindre skriftstørrelse for mindre skjermer */
-  }
-}
-
-/* Medieforespørsel for skjermer som er 600 piksler eller bredere */
-@media screen and (min-width: 600px) {
-  .image-caption {
-    font-size: 3rem; /* Juster skriftstørrelsen etter behov */
-  }
-}
-
-
-
-
-
-
-
-
-
 
 
 
@@ -68,146 +24,204 @@
 
 /* Styling for infoboxes */
 .infoboxen {
-    background-color: var(--color-background-dark,#e9e9e9 ); 
-    padding: 1rem; 
-    margin-bottom: 1rem; 
-  
+  background-color: var(--color-background-dark,#e9e9e9 ); 
+  padding: 1rem; 
+  margin-bottom: 1 rem; 
 }
 
 .infobox {
-  display: flex;
-  flex-flow: column;
+display: flex;
+flex-flow: column;
 
-  justify-content: center;
-  align-items: center;
+justify-content: center;
+align-items: center;
 
-  text-align: center;
-  background-color: var(--color-background-light);
-  
-  color: var(--color-font);  
-  padding: 1rem; 
-  margin: 1rem; 
+text-align: center;
+background-color: var(--color-background-light);
+color: var(--color-font);  
+padding: 1rem; 
+margin: 1rem; 
 
-  /* border-radius: 10px;  */
-   /* border-radius: 0.5rem; */
-  /* box-shadow: var(--color-shadow);   */
-
-  
+box-shadow: var(--color-shadow); 
+/* border-radius: 0.5rem; */
 }
 
 
 /* das letzte Element in jeder Infobox: */
 .infobox :last-child {
-  margin-top: auto;
+margin-top: auto;
 }
 
 /* ab 600 pixel: */
 @media screen and (min-width: 600px) {
 
-  .infoboxen > .inside {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1rem;
-  }
+.infoboxen > .inside {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1rem;
+}
 }
 
 
-/* .infobox img[src$=".svg"] {
-	width: 4rem;
-	height: auto;
-} */
-
-.infobox svg {
-  width: 4rem;
-  height: auto;
+.icon img[src$="svg"] {
+width: 4rem;
+height: auto; 
 }
 
 
 
 
-/*
-   Updateboxen 
+
+  /** 
+  * studentFeedback 
   */ 
 
-  .updateboxen {
-   margin-top: 40px; 
-  }
-
   @media screen and (min-width: 600px) {
-  .updateboxen > .inside {
+  
+    .studentFeedback > .inside {
       display: grid; 
-      grid-template-columns: 1fr 1fr 1fr ;
+      grid-template-columns: 1fr 1fr 1fr;
       grid-gap: 1rem; 
     }
-    
-    .updateboxen > .inside > h2 {
-         grid-column: 1/-1; 
-        
+
+    /* gleich  Selektor .studentFeedback h2:first-child.  */
+
+    .studentFeedback > .inside > h2 {
+      grid-column: 1/-1;
     }
 
   } /* Ende @media */
 
-
-
-  .updatebox {
+  .studentFeedbackItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Plasser innholdet nederst */
     text-align: center; 
-    background-color: var(--color-background-light ); 
+    background-color: var(--color-background-dark,#e9e9e9 );
     color: var(--color-font,#120800);
-          
-      /* background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));     */
-         
-      box-shadow: var(--color-shadow); 
-      padding: 1rem;
-      margin: 0; 
+    background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));
+    box-shadow: 0 1px 3px var(--color-shadow); 
+    padding: 1rem;
+    border-left: 5px solid var(--color-icon-finance, #a19dff);
+    margin: 0; 
     margin-bottom: 1rem;
   }
-    
-   .banner {
-    background: #cc3399; /* Bakgrunnsfarge for banneret */
-    color: white; /* Tekstfarge for banneret */
-    font-size: 1.25rem; /* Størrelse på tekst */
-    padding: 2rem; /* Polstring for innholdet */
-    margin: -0.5rem -0.5rem 1rem -0.5rem; /* Marginaler for justering */
-  } 
-
-  .banner svg {
-    width: 50%; /* Bruk 100% av bredden til banneret */
-    height: auto; /* For å bevare proporsjonene */
-     }
   
-
-  /* Unregelmäßiges Grid */
-.updatebox:nth-child(5) {
-  /* Plassering per auto-placement, men over 2 kolonner og rader */
-  grid-column: span 2;
-  grid-row: span 2;
-
-  /* Vertikal senterjustering */
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-}
-
-
-
-  .updatebox p:first-child { 
+  .studentFeedbackItem blockquote { 
+    margin: 0; 
+  } 
+  
+  .studentFeedbackItem p:first-child { 
     font-size: 1.25rem; 
     font-weight: bold; 
   }
-
-  .updatebox {
-    border: 2px solid transparent; /* Gjør grensen usynlig */
-    border-radius: 5px; /* Runde hjørner */
-    padding: 20px;
-    margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
-}
-
-.updatebox {
-  padding: 20px;
-  margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
-}
-
-
   
+
+
+
+
+
+
+
+
+
+  /* er i basis sjekk feil der?? */
+ 
+  .float-rechts svg {
+    width: 150px;
+    height: 150px;
+    fill: #fcd770;
+}
+
+
+
+
+
+/* Upadateboxen - Dashboard  */
+@media screen and (min-width: 600px) {
+
+  .updateboxen > .inside {
+      display: grid; 
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 1rem; 
+    }
+
+    .updateboxen > .inside > h2 {
+      grid-column: 1/-1;
+    }
+ 
+  }/* Ende @media */
+ 
+ 
+ 
+   .updatebox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Plasser innholdet nederst */
+     text-align: center; 
+     background-color: var(--color-background-light ); 
+     color: var(--color-font,#120800);
+           
+       /* background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));     */
+          
+       box-shadow: var(--color-shadow); 
+       padding: 1rem;
+       margin: 0; 
+     margin-bottom: 1rem;
+   }
+     
+    .banner {
+     background: #cc3399; /* Bakgrunnsfarge for banneret */
+     color: white; /* Tekstfarge for banneret */
+     font-size: 1.25rem; /* Størrelse på tekst */
+     padding: 2rem; /* Polstring for innholdet */
+     margin: -0.5rem -0.5rem 1rem -0.5rem; /* Marginaler for justering */
+   } 
+ 
+   .banner svg {
+     width: 50%; /* Bruk 100% av bredden til banneret */
+     height: auto; /* For å bevare proporsjonene */
+      }
+   
+ 
+   /* Unregelmäßiges Grid */
+ .updatebox:nth-child(5) {
+   /* Plassering per auto-placement, men over 2 kolonner og rader */
+   grid-column: span 2;
+   grid-row: span 2;
+ 
+   /* Vertikal senterjustering */
+   display: flex;
+   flex-flow: column;
+   justify-content: center;
+ }
+ 
+ 
+ 
+   .updatebox p:first-child { 
+     font-size: 1.25rem; 
+     font-weight: bold; 
+   }
+ 
+   .updatebox {
+     border: 2px solid transparent; /* Gjør grensen usynlig */
+     border-radius: 5px; /* Runde hjørner */
+     padding: 20px;
+     margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
+ }
+ 
+ .updatebox {
+   padding: 20px;
+   margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
+ }
+ 
+ 
+   
+ 
+ 
+ 
+
+
+
 
 
