--- a/css/layout.css
+++ b/css/layout.css
@@ -97,7 +97,7 @@ body {
   font-size: smaller; 
   background-color: var(--color-nav);
   color: white; 
-  text-align: right;
+ 
   padding: 1rem;
 }
 
@@ -121,7 +121,7 @@ body {
 }
 
 
-footer-nav li:last-child {
+.footer-nav li:last-child {
   margin-right: 0; 
   margin-left: auto; 
 }
@@ -129,15 +129,18 @@ footer-nav li:last-child {
 .site-footer a {
   color:white; 
   text-decoration: none; 
+  padding: 0.5rem 1rem; 
 }
 
 .site-footer a:hover, 
 .site-footer a:focus {
-  text-decoration: underline; 
+  background: var(--color-nav-darker, #007293); 
+  color:white; 
 }
 
 .site-footer a:active {
-  color: var(--color-nav-darker, #007293); 
+  background: var(--color-nav-darker); 
+  color:white; 
 }
 /** 
   * Ende layout.css 
