--- a/css/navi-responsive.css
+++ b/css/navi-responsive.css
@@ -1,6 +1,139 @@
 /*  =======================================
-       navi-responsiv.css  
-    wird in style.css per @import eingebunden  
+
+
+    Stylesheet zur Gestaltung der Site-Navigation
+    - basiert auf display: flex
+    - Gestaltung nach dem Prinzip Mobile First: 
+      1. Gestaltung für die mobile Navigation  
+      2. Menübutton per CSS gestalten 
+      3. Menübutton per CSS ausblenden 
+      4. Navigationsliste mit dem Menübutton einblenden
+      5. Eine horizontale Navigation für breitere Viewports 
+
+    ================================= */
+
+
+/** 
+  * 1. Gestaltung für die mobile Navigation  
+  */     
+    
+/* Navigationsbereich gestalten */
+.site-nav { 
+  background-color: var(--color-nav,#00a3d2);
+  color: white; 
+
+  box-shadow: 0 2px 6px var(--color-shadow);
+  margin-bottom: 2rem; 
+}
+
+.site-nav .inside {
+  padding: 0; 
+}
+
+/* Navigationsliste als Flex-Container */
+.site-nav ul { 
+  display: flex;
+  flex-flow: column; 
+  list-style: none;  
+  
+  padding: 0; 
+  margin: 0; 
+}
+
+/* Die Listenelemente li benötigen in der mobilen Navigation kein CSS  */
+
+/* Navigationslinks gestalten */
+.site-nav a {
+  display: block;
+  background: var(--color-nav, #00a3d2);
+  color: white; 
+  text-decoration: none; 
+  padding: 0.5rem 1rem; 
+}
+
+/* Hover und Focus gestalten */
+.site-nav a:hover, .site-nav a:focus {
+  background: var(--color-nav-darker, #007293); 
+  color:white; 
+}
+
+/* Im Moment der Aktivierung */
+.site-nav a:active {
+  background: var(--color-nav-darker); 
+  color:white; 
+}
+
+/* Aktuellen Menüpunkt hervorheben */
+.current a { 
+  background: var(--color-nav-darker); 
+  color: white; 
+  text-decoration: underline; 
+}
+
+
+
+/** 
+  * 2. Menübutton per CSS gestalten 
+  */     
+
+/* Kein JavaScript? Menübutton ausblenden */
+.no-js .menubutton { display: none; }
+
+/* Menübutton gestalten */
+.js .menubutton {
+  display: flex;
+  align-items: center;
+
+  cursor: pointer;
+  background: inherit;
+  color:white; 
+  font: inherit; 
+  text-align: center; 
+  padding: 0.5rem 1rem; 
+  border: 0; 
+  margin: 0; 
+}
+
+
+/* Hamburgerikon */
+.js .menubutton::before {
+  content: url("../../UIComponentLibrary/hamburger.svg"); 
+  width: 1rem; 
+  height: 1rem; 
+  margin: 0.25rem; 
+}
+
+
+/**
+  * 3. Menübutton per CSS ausblenden 
+  */
+
+.js .site-nav ul {
+  max-height: 0; 
+  overflow: hidden; 
+}
+
+
+/**
+  * 4. Navigationsliste mit dem Menübutton einblenden 
+  */
+
+/* Navigationsliste mit leichter Animation einblenden  */
+.js .showmenu + ul {
+  max-height: 100rem; 
+  overflow: auto; 
+  transition: max-height 0.5s ease;
+}
+
+/* Tausche Hamburger gegen X */
+.js .menubutton.showmenu::before {
+  content: url("../../UIComponentLibrary/menuclose.svg");
+}
+
+
+/**
+/*  =======================================
+
 
     Stylesheet zur Gestaltung der Site-Navigation
     - basiert auf display: flex
@@ -137,6 +270,47 @@
   */
 
   @media screen and (min-width: 600px) {
+  
+    .menubutton { display: none !important; }
+  
+    .site-nav {
+      position: sticky;
+      top: 0; 
+    }
+  
+    .site-nav .inside {
+      padding: 0 1rem; 
+    }
+  
+    .site-nav ul { 
+      max-height: none !important; 
+      flex-flow: row; 
+      padding: 0; 
+    }
+  
+    .site-nav li {
+      flex: 1; 
+      max-width: 10rem; 
+      text-align: center;
+      border-left: 1px solid var(--color-grey-border); 
+    }
+    .site-nav li:last-child {
+      border-right: 1px solid var(--color-grey-border);
+    }
+  
+
+  /**  
+    * Die Gestaltung der Links 
+    * wird von der mobilen Navigation übernommen 
+    */
+
+
+} /* Ende @media */ 
+
+
+/** 
+  * Ende navi-responsiv.css 
+  */ {
   
     .menubutton { display: none !important; }
   
