--- a/css/content.css
+++ b/css/content.css
@@ -32,18 +32,19 @@
 .infobox {
 display: flex;
 flex-flow: column;
-
 justify-content: center;
 align-items: center;
-
 text-align: center;
 background-color: var(--color-background-light);
 color: var(--color-font);  
 padding: 1rem; 
 margin: 1rem; 
-
 box-shadow: var(--color-shadow); 
 /* border-radius: 0.5rem; */
+}
+
+.infobox > *:nth-child(3) {
+  margin-top: auto;
 }
 
 
@@ -62,82 +63,76 @@ margin-top: auto;
 }
 }
 
-
 .icon img[src$="svg"] {
 width: 4rem;
 height: auto; 
 }
 
-
-
-
-
-  /** 
-  * studentFeedback 
-  */ 
-
-  @media screen and (min-width: 600px) {
-  
-    .studentFeedback > .inside {
-      display: grid; 
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-gap: 1rem; 
-    }
-
-    /* gleich  Selektor .studentFeedback h2:first-child.  */
-
-    .studentFeedback > .inside > h2 {
-      grid-column: 1/-1;
-    }
-
-  } /* Ende @media */
-
-  .studentFeedbackItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* Plasser innholdet nederst */
-    text-align: center; 
-    background-color: var(--color-background-dark,#e9e9e9 );
-    color: var(--color-font,#120800);
-    background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));
-    box-shadow: 0 1px 3px var(--color-shadow); 
-    padding: 1rem;
-    border-left: 5px solid var(--color-icon-finance, #a19dff);
-    margin: 0; 
-    margin-bottom: 1rem;
-  }
-  
-  .studentFeedbackItem blockquote { 
-    margin: 0; 
-  } 
-  
-  .studentFeedbackItem p:first-child { 
-    font-size: 1.25rem; 
-    font-weight: bold; 
-  }
-  
-
-
-
-
-
-
-
-
-
-  /* er i basis sjekk feil der?? */
- 
-  .float-rechts svg {
-    width: 150px;
-    height: 150px;
-    fill: #fcd770;
+.infobox svg {
+  flex: 0 0 auto; /* Sørger for at SVG-ikonet ikke endrer størrelse basert på tilgjengelig plass */
+  width: 3em; /* Endre størrelsen på SVG-ikonet */
+  height: auto; /* Sikrer proporsjonal størrelse og responsivitet */
+  margin-bottom: 0.5em; /* Legger til litt avstand under SVG-ikonet */
+  margin-top: 0.5em; /* Legger til litt avstand over SVG-ikonet */
 }
 
 
 
 
+/* Upadateboxen/Dashboard - grundlegende gestaltung */
+.updateboxen {
+  background-color: var(--color-background-light);
+  padding: 1rem; 
+  margin-bottom: 1rem;
+}
 
-/* Upadateboxen - Dashboard  */
+.updatebox {
+  display: flex;
+  flex-direction: column;
+
+   text-align: center; 
+   background-color: var(--color-background-light ); 
+   color: var(--color-font,#120800);
+   box-shadow: var(--color-shadow); 
+     padding: 1rem;
+     margin: 0; 
+   margin-bottom: 1rem;
+
+  border: 2px solid transparent; /* Gjør grensen usynlig */
+  border-radius: 5px; /* Runde hjørner */
+}
+
+.updatebox :last-child {
+  margin-top: auto; 
+}
+
+.banner {
+  display: flex;
+  align-items: center; /* Justerer vertikalt innholdet i midten av banneret */
+  justify-content: center; /* Justerer horisontalt innholdet i midten av banneret */
+
+  background: #cc3399; /* Bakgrunnsfarge for banneret */
+  color: white; /* Tekstfarge for banneret */
+  font-size: 1.25rem; /* Størrelse på tekst */
+  padding: 2rem; /* Polstring for innholdet */
+  margin: -0.5rem -0.5rem 1rem -0.5rem; /* Marginaler for justering */
+  max-height: 100px; /* Sett en maksimal høyde for banneret */
+  overflow: hidden;
+} 
+/* usikker på denne  */
+.banner svg {
+  width: 40%; /* Bruk 40% av bredden til banneret */
+  max-width: 60px; /* Maks bredde for å sikre at det ikke blir for stort */
+  max-height: 80%; /* Maks høyde basert på bannerets max-height */
+  height: auto; /* For å bevare proporsjonene */
+  
+  fill: #cccccc; /* Endre fargen på ikonet til grå */
+  opacity: 0.7; /* Reduser gjennomsiktigheten for å redusere kontrasten */
+  stroke-width: 1px; /* Reduser linjetykkelsen */
+}
+  
+
+/* media querry  */
 @media screen and (min-width: 600px) {
 
   .updateboxen > .inside {
@@ -146,79 +141,66 @@ height: auto;
       grid-gap: 1rem; 
     }
 
-    .updateboxen > .inside > h2 {
-      grid-column: 1/-1;
+    
+  }/*Ende Media */
+
+  /* Updateboxen */
+  @media screen and (min-width: 600px) {
+  
+    .updateboxen > .inside {
+      display: grid; 
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-gap: 1rem; 
     }
- 
-  }/* Ende @media */
- 
- 
- 
-   .updatebox {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; /* Plasser innholdet nederst */
-     text-align: center; 
-     background-color: var(--color-background-light ); 
-     color: var(--color-font,#120800);
-           
-       /* background-image: linear-gradient(to right, var(--color-grey-border), var(color-grey-border-light));     */
-          
-       box-shadow: var(--color-shadow); 
-       padding: 1rem;
-       margin: 0; 
-     margin-bottom: 1rem;
-   }
-     
-    .banner {
-     background: #cc3399; /* Bakgrunnsfarge for banneret */
-     color: white; /* Tekstfarge for banneret */
-     font-size: 1.25rem; /* Størrelse på tekst */
-     padding: 2rem; /* Polstring for innholdet */
-     margin: -0.5rem -0.5rem 1rem -0.5rem; /* Marginaler for justering */
-   } 
- 
-   .banner svg {
-     width: 50%; /* Bruk 100% av bredden til banneret */
-     height: auto; /* For å bevare proporsjonene */
-      }
+
+    .updateboxen> .inside > h2 {
+      grid-column: 1/-1; 
+    }
+
+  } /* Ende @media */
    
- 
-   /* Unregelmäßiges Grid */
+  /* Updatebox */
+  .updatebox{
+    text-align: center; 
+    color: var(--color-font); 
+    padding: 1rem;
+    margin: 0; 
+    margin-bottom: 1rem;
+  }
+
+
+       /* Unregelmäßiges Grid  */
  .updatebox:nth-child(5) {
-   /* Plassering per auto-placement, men over 2 kolonner og rader */
-   grid-column: span 2;
-   grid-row: span 2;
  
-   /* Vertikal senterjustering */
-   display: flex;
-   flex-flow: column;
-   justify-content: center;
- }
+  grid-column: span 2; 
+  grid-row: span 2; 
+
+  /* Vertikal zentrieren */
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
+ .updatebox p:first-child { 
+  font-size: 1.25rem; 
+  font-weight: bold; 
+} 
+
  
+
+
+
+
+
+  /* Personlig Dashboard Icon høyre */
  
- 
-   .updatebox p:first-child { 
-     font-size: 1.25rem; 
-     font-weight: bold; 
-   }
- 
-   .updatebox {
-     border: 2px solid transparent; /* Gjør grensen usynlig */
-     border-radius: 5px; /* Runde hjørner */
-     padding: 20px;
-     margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
- }
- 
- .updatebox {
-   padding: 20px;
-   margin-bottom: 20px; /* Legg til mellomrom mellom boksene */
- }
- 
- 
-   
- 
- 
+  .float-rechts svg {
+    width: 150px;
+    height: 150px;
+    fill: #fcd770;
+}
+
+
  
 
 
