--- a/css/navi-responsive.css
+++ b/css/navi-responsive.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*  =======================================
 
 
@@ -23,23 +22,6 @@
   background-color: var(--color-nav,#00a3d2);
   color: white; 
 
-=======
-/* Stylesheet zur Gestaltung der Site-Navigation */
-/* basiert auf display: flex */
-/* Gestaltung nach dem Prinzip Mobile First: */
-/* 1. Gestaltung für die mobile Navigation */
-/* 2. Menübutton per CSS gestalten */
-/* 3. Menübutton per CSS ausblenden */
-/* 4. Navigationsliste mit dem Menübutton einblenden */
-/* 5. Eine horizontale Navigation für breitere Viewports */
-
-/* 1. Gestaltung für die mobile Navigation */
-
-/* Navigationsbereich gestalten */
-.site-nav {
-  background-color: var(--color-nav,#00a3d2);
-  color: white;
->>>>>>> Abdiqani_branch
   box-shadow: 0 2px 6px var(--color-shadow);
   margin-bottom: 2rem; 
 }
@@ -49,7 +31,6 @@
 }
 
 /* Navigationsliste als Flex-Container */
-<<<<<<< HEAD
 .site-nav ul { 
   display: flex;
   flex-flow: column; 
@@ -57,14 +38,6 @@
   
   padding: 0; 
   margin: 0; 
-=======
-.site-nav ul {
-  display: flex;
-  flex-flow: column;
-  list-style: none;
-  padding: 0;
-  margin: 0;
->>>>>>> Abdiqani_branch
 }
 
 /* Die Listenelemente li benötigen in der mobilen Navigation kein CSS  */
@@ -73,7 +46,6 @@
 .site-nav a {
   display: block;
   background: var(--color-nav, #00a3d2);
-<<<<<<< HEAD
   color: white; 
   text-decoration: none; 
   padding: 0.5rem 1rem; 
@@ -83,23 +55,10 @@
 .site-nav a:hover, .site-nav a:focus {
   background: var(--color-nav-darker, #007293); 
   color:white; 
-=======
-  color: white;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-}
-
-/* Hover und Focus gestalten */
-.site-nav a:hover,
-.site-nav a:focus {
-  background: var(--color-nav-darker, #007293);
-  color: white;
->>>>>>> Abdiqani_branch
 }
 
 /* Im Moment der Aktivierung */
 .site-nav a:active {
-<<<<<<< HEAD
   background: var(--color-nav-darker); 
   color:white; 
 }
@@ -119,31 +78,11 @@
 
 /* Kein JavaScript? Menübutton ausblenden */
 .no-js .menubutton { display: none; }
-=======
-  background: var(--color-nav-darker);
-  color: white;
-}
-
-/* Aktuellen Menüpunkt hervorheben */
-.current a {
-  background: var(--color-nav-darker);
-  color: white;
-  text-decoration: underline;
-}
-
-/* 2. Menübutton per CSS gestalten */
-
-/* Kein JavaScript? Menübutton ausblenden */
-.no-js .menubutton {
-  display: none;
-}
->>>>>>> Abdiqani_branch
 
 /* Menübutton gestalten */
 .js .menubutton {
   display: flex;
   align-items: center;
-<<<<<<< HEAD
 
   cursor: pointer;
   background: inherit;
@@ -162,78 +101,6 @@
   width: 1rem; 
   height: 1rem; 
   margin: 0.25rem; 
-=======
-  cursor: pointer;
-  background: inherit;
-  color: white;
-  font: inherit;
-  text-align: center;
-  padding: 0.5rem 1rem;
-  border: 0;
-  margin: 0;
-}
-
-/* Hamburgerikon */
-.js .menubutton::before {
-  content: url("../../UIComponentLibrary/hamburger.svg");
-  width: 1rem;
-  height: 1rem;
-  margin: 0.25rem;
-}
-
-/* 3. Menübutton per CSS ausblenden */
-
-.js .site-nav ul {
-  max-height: 0;
-  overflow: hidden;
-}
-
-/* 4. Navigationsliste mit dem Menübutton einblenden */
-
-/* Navigationsliste mit leichter Animation einblenden */
-.js .showmenu + ul {
-  max-height: 100rem;
-  overflow: auto;
-  transition: max-height 0.5s ease;
-}
-
-/* Tausche Hamburger gegen X */
-.js .menubutton.showmenu::before {
-  content: url("../../UIComponentLibrary/menuclose.svg");
-}
-
-/* 5. Eine horizontale Navigation für breitere Viewports */
-
-@media screen and (min-width: 600px) {
-  .menubutton {
-    display: none !important;
-  }
-
-  .site-nav {
-    position: sticky;
-    top: 0;
-  }
-
-  .site-nav .inside {
-    padding: 0 1rem;
-  }
-
-  .site-nav ul {
-    max-height: none !important;
-    flex-flow: row;
-    padding: 0;
-  }
-
-  .site-nav li {
-    flex: 1;
-    max-width: 10rem;
-    text-align: center;
-    border-left: 1px solid var(--color-grey-border);
-  }
-  .site-nav li:last-child {
-    border-right: 1px solid var(--color-grey-border);
-  }
->>>>>>> Abdiqani_branch
 }
 
 
@@ -443,7 +310,7 @@
 
 /** 
   * Ende navi-responsiv.css 
-  */ {
+  */ 
   
     .menubutton { display: none !important; }
   
@@ -479,7 +346,7 @@
     */
 
 
-} /* Ende @media */ 
+/* Ende @media */ 
 
 
 /** 
