--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@
 @import url("dropdown.css"); 
 @import url("content.css");
 @import url("contact.css"); 
-@import url("overview.css"); 
-@import url("footer.css"); 
+/* @import url("overview.css");  */
+/* @import url("footer.css");  */
 /*@import url("auth.css");*/
 @import url("basis.css");
 
