--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@
 @import url("content.css");
 @import url("header.css");
  
-@import url("overview.css"); 
+/* @import url("overview.css");  */
 /* @import url("footer.css");  */
 
 @import url("auth.css");
